[gd_scene load_steps=2 format=3 uid="uid://c9su3nqipy4l2"]

[ext_resource type="Script" path="res://scripts/demos/friends_demo.gd" id="1_friends"]

[node name="FriendsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_friends")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EpicOS Friends Demo"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 24)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "‚Üê Back to Menu"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Status: Not Logged In (Friends require authentication)"
add_theme_font_size_override("font_size", 16)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
text = "Friends Actions"
add_theme_font_size_override("font_size", 18)

[node name="ActionsGrid" type="GridContainer" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
columns = 3

[node name="QueryFriendsButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Friends List"
disabled = true

[node name="QueryAllInfoButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query All Friends Info"
disabled = true

[node name="RefreshButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Refresh Display"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FriendsSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FriendsListPanel" type="Panel" parent="VBoxContainer/FriendsSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FriendsListContainer" type="VBoxContainer" parent="VBoxContainer/FriendsSection/FriendsListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="FriendsListLabel" type="Label" parent="VBoxContainer/FriendsSection/FriendsListPanel/FriendsListContainer"]
layout_mode = 2
text = "Friends List"
add_theme_font_size_override("font_size", 16)

[node name="FriendsScrollContainer" type="ScrollContainer" parent="VBoxContainer/FriendsSection/FriendsListPanel/FriendsListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FriendsList" type="ItemList" parent="VBoxContainer/FriendsSection/FriendsListPanel/FriendsListContainer/FriendsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FriendDetailsPanel" type="Panel" parent="VBoxContainer/FriendsSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FriendDetailsContainer" type="VBoxContainer" parent="VBoxContainer/FriendsSection/FriendDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="FriendDetailsLabel" type="Label" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer"]
layout_mode = 2
text = "Friend Details"
add_theme_font_size_override("font_size", 16)

[node name="SelectedFriendLabel" type="Label" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer"]
layout_mode = 2
text = "Selected: None"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer"]
layout_mode = 2

[node name="FriendInfoScrollContainer" type="ScrollContainer" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FriendInfoText" type="RichTextLabel" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer/FriendInfoScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a friend from the list to view details"

[node name="QueryFriendInfoButton" type="Button" parent="VBoxContainer/FriendsSection/FriendDetailsPanel/FriendDetailsContainer"]
layout_mode = 2
text = "Query Selected Friend Info"
disabled = true

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer/OutputSection"]
layout_mode = 2
text = "Output Log"
add_theme_font_size_override("font_size", 16)

[node name="OutputScrollContainer" type="ScrollContainer" parent="VBoxContainer/OutputSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/OutputSection/OutputScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=green]Welcome to the EpicOS Friends Demo![/color]

This demo shows how to:
1. Query your friends list
2. Get detailed information about friends
3. Handle friends-related callbacks

[color=yellow]Note: You must be logged in to use friends features.[/color]
"
scroll_following = true